2004-02-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/translator.hh (class Translator): add virtual
	qualifier.

2004-02-10  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (compose_ly): Python2.1 workarounds.

2004-02-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (compose_ly): Add kludge for relative.

	* Documentation/user/refman.itely: Run texinfo-all-menus-update
	(fixes make web).

	* GNUmakefile.in (web-clean): Do not remove fonts (they do not
	live in $(out)-www).

	* scripts/lilypond-book.py: Small cleanups.  Junk hairy include
	dependencies.  Add link to .ly source in HTML output.
	(Lilypond_snippet.output_html): Handle multiple page picture
	output.
	(Lilypond_snippet.output_html, Lilypond_snippet.output_latex):
	Make usable for output_texinfo again.

	* Documentation/user/GNUmakefile: Add static dependency for
	lilypond.tely includes.

	* Documentation/user/tutorial.itely: Add some lost `relative'
	ly-options.

2004-02-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/include/translator-group.hh: move Music_output_def member
	to Global_translator.

	* scripts/lilypond-book.py (do_file):  fix latex output.

	* VERSION: release 2.1.20
	
	* scm/part-combiner.scm (determine-split-list): robustness fix 

	* lily/paper-score.cc (process): move gc stat stuff to init.ly 

	* lily/parser.yy (music_output_def_body): plug memory leak.

	* lily/translator-group.cc (add_fresh_group_translator): plug
	memory leak: unprotect Translator_group once added.   

	* lily/span-dynamic-performer.cc (process_music): deprecate span-type.

	* scripts/lilypond-book.py (Lilypond_snippet.notice_include):
	write .dep file.
	(Lilypond_snippet.ly): add \renameinput.

2004-02-08  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/refman.itely (Markup command definition): Doc
	by Nicolas Sceaux. Rewrite by Han-Wen

	* lily/lyric-hyphen.cc (brew_molecule): remove if hyphen is first
	thing of the line.