@@ -1,3 +1,9 @@
+2004-02-10  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scripts/lilypond-book.py: Fixes for make web.  Default to stdout
+	only when filtering, default to input_base otherwise.  Coding
+	style fixes.
+
 2004-02-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* lily/include/translator.hh (class Translator): add virtual
